2004-06-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnheader.el (nnheader-nov-read-message-id): Pass the optional
	arg to nnheader-generate-fake-message-id.

2004-06-14  Teodor Zlatanov  <tzz@lifelogs.com>

	* nnheader.el (nnheader-generate-fake-message-id): accept a
	number and build a fake message ID localized to a group and
	article number (so it's repeatable from that point on)
	(nnheader-fake-message-id-p): change regex to accomodate new fake
	ID format

	* gnus-sum.el (gnus-get-newsgroup-headers): call
	nnheader-generate-fake-message-id with the article number

2004-06-12  YAGI Tatsuya  <ynyaaa@ybb.ne.jp>  (tiny change)

	* gnus-art.el (gnus-article-next-page): Fix the way to find a real
	end-of-buffer.

2004-06-12  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-ignored-supersedes-headers): Add Approved. 

2004-06-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* rfc2047.el (rfc2047-encode-message-header): Remove useless
	goto-char.
	(rfc2047-encode): Fold the line before encoding.

2004-06-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* rfc2047.el (rfc2047-encode-message-header): Disabled header
	folding -- not all headers can be folded, and this should be done
	by the message composition mode.  Probably.  I think. 

2004-06-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-util.el (gnus-remove-text-with-property): Make it slightly
	fast.

	* gnus-ems.el (gnus-remove-image): Don't use
	message-text-with-property; remove only the image found first.

	* gnus-xmas.el (gnus-xmas-remove-image): Remove only the image
	found first.

2004-06-09  Jesper Harder  <harder@ifa.au.dk>

	* message.el (message-send-mail-with-sendmail): Use with-current-buffer.

2004-06-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-text-with-property): Make it fast and accept
	optional arguments.
	(message-strip-forbidden-properties): Use it.
	(message-fix-before-sending): Follow the m-t-w-p change.

	* gnus-ems.el (gnus-remove-image): Follow the m-t-w-p change.
